--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chronos",
   "version": "1.0.0",
-  "description": "a simple time generator",
-  "main": "index.js",
+  "description": "Chronos is a light weight time and date string manipulation function.",
+  "main": "chronos.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
